data/issues_raw/docs/docs_train_439.txt
Say that we need gcc >= 4.8 (was "Need help on compilation error on Mac")

Having met the following compilation errors:
tensorflow/core/kernels/fifo_queue.cc:247:46: error: expected body of lambda expression
[callback, this](Attempt* attempt) EXCLUSIVE_LOCKS_REQUIRED(mu_) {
^
Please let me know if you have any ideas. Thanks!